@@ -30,6 +30,14 @@ o  The configuration script now explicitly checks that a recent enough
    enabled (in previous versions this check was not performed and
    building the library could fail in a mysterious way).
 
+o  The C interface now provides functions of the form
+
+     int ppl_io_asprint_Polyhedron(char** strp, P x)
+
+   where `P' is any opaque pointer to a const PPL object. These functions
+   prints `x' to a malloc-allocated string, a pointer to which is returned
+   via `strp'.
+
 
 Bugfixes
 ========
